--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.hero {
+  background-color: #1F2937;
+}
+
+.hero-text1 {
+  font-size: 48px;
+  font-weight: 800;
+  color: #F9FAF8;
+}
+
+.hero-text2,
+ul,
+button {
+  font-size: 18px;
+  color: #E5E7EB;
+}
+
+.logo {
+  font-size: 24px;
+  color: #F9FAF8;
+}
+
+.placeholder {
+  background-color: gray;
+}
+
+button {
+  background-color: #3882F6;
+}
