--- a/style.css
+++ b/style.css
@@ -1,9 +1,27 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
 }
 
 .hero {
   background-color: #1F2937;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 50px;
+}
+
+.header {
+  display: flex;
+  width: 100vw;
+  justify-content: space-between;
+  align-items: center;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .hero-text1 {
