--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   background-color: #1F2937;
   display: flex;
   flex-wrap: wrap;
-  padding: 0 50px;
+  padding: 0 180px;
 }
 
 .header {
@@ -15,6 +15,22 @@ body {
   width: 100vw;
   justify-content: space-between;
   align-items: center;
+}
+
+.main-blue {
+  display: flex;
+  width: 100vw;
+  gap: 20px;
+  padding: 50px 0;
+  justify-content: space-between;
+}
+
+.main-left {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
 }
 
 ul {
@@ -44,6 +60,11 @@ button {
 
 .placeholder {
   background-color: gray;
+  color: white;
+  width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button {
