--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   background-color: #1F2937;
   display: flex;
   flex-wrap: wrap;
-  padding: 20px 180px;
+  padding: 20px 165px;
 }
 
 .header {
@@ -38,6 +38,7 @@ ul {
   list-style: none;
   margin: 0;
   padding: 0;
+  gap: 20px;
 }
 
 .hero-text1 {
