--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   background-color: #1F2937;
   display: flex;
   flex-wrap: wrap;
-  padding: 20px 165px;
+  padding: 20px 190px;
 }
 
 .header {
@@ -21,7 +21,7 @@ body {
 .main-blue {
   display: flex;
   width: 100vw;
-  gap: 20px;
+  gap: 15px;
   padding: 50px 0;
   justify-content: space-between;
 }
@@ -72,4 +72,7 @@ button {
 button {
   background-color: #3882F6;
   border: none;
+  border-radius: 6px;
+  padding: 8px 30px;
+  font-weight: bold;
 }
