Style information header text

--- a/style.css
+++ b/style.css
@@ -77,3 +77,9 @@ button {
   padding: 8px 30px;
   font-weight: bold;
 }
+
+.information-header {
+  font-size: 36px;
+  font-weight: 800;
+  color: #1F2937
+}
