--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
+  padding: 0;
+  width: 100vw;
 }
 
 .hero {
@@ -125,7 +127,7 @@ button {
 }
 
 .quote {
-  width: 60%;
+  width: 70%;
   align-self: center;
   font-size: 36px;
   font-weight: lighter;
