--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
 }
 
 .hero {
-  background-color: #1F2937;
   display: flex;
   flex-wrap: wrap;
   padding: 20px 190px;
@@ -52,7 +51,9 @@ ul {
 }
 
 .hero-text2,
-ul {
+ul,
+.call2,
+.footer {
   font-size: 18px;
   color: #E5E7EB;
 }
@@ -98,7 +99,7 @@ button {
   font-size: 36px;
   font-weight: 800;
   margin: 50px;
-  color: #1F2937
+  color: #1F2937;
 }
 
 .information {
@@ -112,10 +113,7 @@ button {
   display: flex;
   flex-direction: column;
   width: 150px;
-  gap: 8px;
-}
-
-.blank-box {
+  gap: 8px;  - Start footer
   height: 150px;
   border-style: solid;
   border-color: #3882F6;
@@ -136,7 +134,6 @@ button {
   font-size: 36px;
   font-weight: lighter;
   font-style: italic;
-  color: #1F2937;
 }
 
 .reference {
@@ -163,11 +160,17 @@ button {
   font-size: 22px;
 }
 
-.call2 {
-  color: #E5E7EB;
-  font-size: 18px;
-}
-
 #border {
   border: solid;
+}
+
+.dark-color {
+  background-color: #1F2937;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 35px;
 }
