--- a/style.css
+++ b/style.css
@@ -113,12 +113,15 @@ button {
   display: flex;
   flex-direction: column;
   width: 150px;
-  gap: 8px;  - Start footer
-  height: 150px;
+  gap: 8px;
+}
+
+.blank-box {
   border-style: solid;
   border-color: #3882F6;
   border-width: 4px;
-  border-radius: 8%
+  border-radius: 8%;
+  height: 150px;
 }
 
 .gray {
