--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
-.page {
+.page--font {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin: 0;
-  padding: 0;
-  width: 100vw;
 }
 
 .hero {
