--- a/style.css
+++ b/style.css
@@ -2,18 +2,18 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.hero {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 20px 190px;
-}
-
 .header {
   display: flex;
   width: 100vw;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 70px;
+}
+
+.hero {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px 190px;
 }
 
 .main-blue {
@@ -55,7 +55,7 @@ ul,
   color: #E5E7EB;
 }
 
-.logo {
+.header__logo {
   font-size: 24px;
   color: #F9FAF8;
 }
