--- a/style.css
+++ b/style.css
@@ -44,6 +44,15 @@
   background-color: #3882F6;
 }
 
+.hero__image {
+  background-color: gray;
+  color: white;
+  width: 475px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .main-blue {
   display: flex;
   width: 100vw;
@@ -65,15 +74,6 @@ ul,
 .footer {
   font-size: 18px;
   color: #E5E7EB;
-}
-
-.placeholder {
-  background-color: gray;
-  color: white;
-  width: 475px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 button {
