--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/* 
+Blue section starts 
+*/
+
+.section--dark-blue {
+  background-color: #1F2937;
+}
+
 .header {
   display: flex;
   width: 100vw;
@@ -55,6 +63,10 @@
   justify-content: center;
   align-items: center;
 }
+
+/* 
+Blue section ends 
+*/
 
 .call2,
 .footer {
