--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ Blue section starts
 .hero__image {
   background-color: gray;
   color: white;
-  width: 40%;
+  width: 500px;
   display: flex;
   justify-content: center;
   align-items: center;
