--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ Information section starts
   color: #E5E7EB;
 }
 
-.information {
+.information__flex {
   display: flex;
   flex-wrap: wrap;
   padding-bottom: 100px;
