--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@
   padding: 0;
 }
 
-/* 
-Blue section starts 
-*/
+/* Header/hero section starts */
 
 .section {
   padding: 0px 15%;
@@ -85,51 +83,44 @@ Blue section starts
   align-items: center;
 }
 
-/* 
-Information section starts
-*/
+/* Information section starts */
 
-.call2,
-.footer {
-  font-size: 18px;
-  color: #E5E7EB;
-}
-
-.information__flex {
+.information {
   display: flex;
-  flex-wrap: wrap;
-  padding-bottom: 100px;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
 }
 
 .information__header {
-  display: flex;
-  justify-content: center;
   font-size: 36px;
   font-weight: 800;
   margin: 50px;
   color: #1F2937;
 }
 
-.information {
+.information__flex {
   display: flex;
-  justify-content: center;
-  gap: 40px;
+  flex-wrap: wrap;
+  padding-bottom: 50px;
+  gap: 25px;
 }
 
-.img-text {
-  display: flex;
+.information__flex--column {
   flex-direction: column;
   width: 150px;
   gap: 8px;
 }
 
-.blank-box {
+.information__image {
   border-style: solid;
   border-color: #3882F6;
   border-width: 4px;
   border-radius: 8%;
   height: 150px;
 }
+
+/* Gray section starts below */
 
 .gray {
   background-color: #E5E7Eb;
