refactor: class 'call0' renamed to 'call-to-action'

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@
 
 /* Call to action starts below */
 
-.call0 {
+.call-to-action {
   display: flex;
   padding: 50px 50px;
   justify-content: space-around;
