--- a/style.css
+++ b/style.css
@@ -178,4 +178,7 @@
   justify-content: center;
   align-items: center;
   padding: 35px;
+  background-color: #1F2937;
+  font-size: 18px;
+  color: #E5E7EB;
 }
